--- a/resources/sass/views/_news.scss
+++ b/resources/sass/views/_news.scss
@@ -14,6 +14,7 @@
   @include bp-md() {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: $space-10x;
     margin-top: $space-6x;
     padding: $space-6x;
   }
@@ -24,12 +25,12 @@
   }
 
   article {
-    border-bottom: 1px dashed $color-black;
     @include font-playfair-regular();
     @include font-playfair-regular();
     @include font-size($fs-xs);
     margin-bottom: $space-6x;
-    padding-bottom: $space-6x;
+    padding-left: $space-1x;
+    padding-right: $space-1x;
 
     &:last-of-type {
       border-bottom: 0;
@@ -37,27 +38,32 @@
     }
 
     @include bp-md() {
-      border-bottom: none;
       margin-bottom: 0;
-      padding-bottom: 0;
 
-      &:first-of-type {
+      &:nth-child(odd) {
         border-right: 1px dashed $color-black;
-        padding-right: $space-4x;
+        padding-right: $space-6x;
       }
-
-      &:last-of-type {
-        padding-left: $space-4x;
+      &:nth-child(even) {
+        padding-left: $space-6x;
       }
     }
 
     @include bp-lg() {
-      &:first-of-type {
+      &:nth-child(odd) {
         padding-right: $space-8x;
       }
-
-      &:last-of-type {
+      &:nth-child(even) {
         padding-left: $space-8x;
+      }
+    }
+
+    &.news__item--image {
+      @include bp-md() {
+        padding-top: $space-2x;
+      }
+      @include bp-lg() {
+        padding-top: $space-3x;
       }
     }
   }
