--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,3 @@
 {{ partial:gallery :gallery="gallery" :dailymenu="daily_menu" }}
 {{ partial:events }}
-{{ partial:about :opening_hours="opening_hours" :visual="visual" :location="location" }}
-
+{{ partial:about :opening_hours="opening_hours" :visual="visual" :location="location" :teaser="teaser" }}
