--- a/resources/views/partials/footer.antlers.html
+++ b/resources/views/partials/footer.antlers.html
@@ -9,7 +9,7 @@
       </span>
       <span>
         {{ collection:social_media_channels }}
-          <a href="{{ url }}" target="_blank" rel="noopener noreferer" title="{{ title }}">{{ title }}</a>{{ if first}} | {{ endif }}
+          <a href="{{ link }}" target="_blank" rel="noopener noreferer" title="{{ title }}">{{ title }}</a>{{ if first}} | {{ endif }}
         {{ /collection:social_media_channels }}
       </span>
     </span>
