--- a/resources/views/partials/about.antlers.html
+++ b/resources/views/partials/about.antlers.html
@@ -16,25 +16,17 @@
     {{ endif }}
   </div>
   <div class="grid-2x1-sm">
-    <article class="about__shop">
-      {{ if teaser }}
-        <div>
-          {{ teaser }}
-        </div>
-      {{ else }}
-        <div>
-          <h2>Unser Shop</h2>
-          <h3>Fine Food & Beer</h3>
-          <p>Schon bald kannst du exquisite Schweizer Delikatessen von Regionalen Anbietern sowie aus dem SlowFood Sortiment von Daniel H. zuhause geniessen. Im Moment kosten wir sie für die perfekte Genussfreude vor.</p>
-        </div>
-      {{ /if }}
+    <article class="about__visual">
+      <div>
+        <img src="/assets/daniel-h-slideshow-3.jpg" class="is-responsive">
+      </div>
     </article>
     <article class="about__location">
       <div>
         {{ location }}
         <p>
           {{ collection:social_media_channels }}
-            <a href="{{ url }}" target="_blank" rel="noopener noreferer" title="{{ title }}">{{ title }}</a>{{ if first}} | {{ endif }}
+            <a href="{{ link }}" target="_blank" rel="noopener noreferer" title="{{ title }}">{{ title }}</a>{{ if first}} | {{ endif }}
           {{ /collection:social_media_channels }}
         </p>
       </div>
