--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -71,6 +71,7 @@
 @import 'views/slideshow';
 @import 'views/daily-menu';
 @import 'views/news';
+@import 'views/menu';
 @import 'views/about';
 @import 'views/error';
 
