--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,3 +1,4 @@
-{{ partial:gallery :gallery="gallery" :dailymenu="daily_menu" }}
+{{ partial:gallery :gallery="gallery" }}
 {{ partial:events }}
+{{ partial:menu }}
 {{ partial:about :opening_hours="opening_hours" :visual="visual" :location="location" :teaser="teaser" }}
