--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -20,7 +20,7 @@
 <meta name="theme-color" content="#ffffff">
 <meta name="csrf-token" content="RqiwoaZ7fhAKNssyf0W3dBGhX8o8GDDsrCOtHJHR" />
 <meta name="format-detection" content="telephone=no">
-<link rel="stylesheet" href="{{ mix src='css/app.css' }}">
+<link rel="stylesheet" href="/css/app.css?v=2">
 </head>
 <body>
 {{ partial:header }}
